--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   ],
   "peerDependencies": {
     "prop-types": "^15",
-    "react": "^16.8 || ^17.0 || ^18.0 | ^19.0"
+    "react": "^16.8 || ^17.0 || ^18.0 || ^19.0"
   },
   "devDependencies": {
     "@types/react-dom": "^16.9.8",
