--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "@bsol-oss/dayzed-react19",
   "version": "0.0.2",
   "description": "(Copy of dayzed that accept react19) Primitives to build simple, flexible, WAI-ARIA compliant React datepicker components.",
-  "main": "dist/dayzed.cjs.js",
-  "jsnext:main": "dist/dayzed.esm.js",
-  "module": "dist/dayzed.esm.js",
-  "types": "typings/dayzed.d.ts",
+  "main": "dist/dayzed-react19.cjs.js",
+  "jsnext:main": "dist/dayzed-react19.esm.js",
+  "module": "dist/dayzed-react19.esm.js",
+  "types": "typings/dayzed-react19.d.ts",
   "license": "MIT",
   "scripts": {
     "contributors:add": "all-contributors add",
